# lightning-glue-factory

./: pyproject.toml
gluefactory/: __init__.py  train.py
gluefactory/configs/: superpoint-open+lightglue_homography.yaml
gluefactory/datasets/: augmentations.py  base_dataset.py  eth3d.py  homographies.py  hpatches.py  image_folder.py  image_pairs.py  megadepth.py  utils.py
gluefactory/eval/: __init__.py  eth3d.py  eval_pipeline.py  hpatches.py  inspect.py  io.py  megadepth1500.py  utils.py
gluefactory/geometry/: depth.py  epipolar.py  gt_generation.py  homography.py  wrappers.py
gluefactory/models/: base_model.py  cache_loader.py  two_view_pipeline.py
gluefactory/models/backbones/: dinov2.py
gluefactory/models/extractors/: aliked.py  disk_kornia.py  sift.py  sift_kornia.py  superpoint_open.py
gluefactory/models/lines/: deeplsd.py  lsd.py  wireframe.py
gluefactory/models/matchers/: gluestick.py  kornia_loftr.py  lightglue.py  nearest_neighbor_matcher.py
gluefactory/models/utils/: losses.py  metrics.py
gluefactory/robust_estimators/: base_estimator.py
gluefactory/robust_estimators/relative_pose/: opencv.py  pycolmap.py
gluefactory/scripts/: export_local_features.py  export_megadepth.py
gluefactory/utils/: experiments.py  export_predictions.py  misc.py  stdout_capturing.py  tensor.py  tools.py
gluefactory/visualization/: global_frame.py  tools.py  two_view_frame.py  visualize_batch.py  viz2d.py
gluefactory_nonfree/: superglue.py  superpoint.py
lightning_gluefactory/: __init__.py  env.py  glue_factory.py  train.py
lightning_gluefactory/configs/: hydra.yaml  superpoint-open+lightglue_homography.yaml  train.yaml
lightning_gluefactory/configs/callbacks/: model_checkpointing.yaml  speed_monitor.yaml
lightning_gluefactory/configs/data/: base.yaml  cache_loader.yaml  homography.yaml
lightning_gluefactory/configs/loggers/: aimstack.yaml
lightning_gluefactory/configs/models/: base.yaml  two_view_pipeline.yaml
lightning_gluefactory/configs/models/extractors/: superpoint_open.yaml
lightning_gluefactory/configs/models/matchers/: homography.yaml  lightglue.yaml
lightning_gluefactory/datasets/: base_dataset.py  homographies.py
lightning_gluefactory/models/: base_model.py  two_view_pipeline.py
lightning_gluefactory/models/extractors/: superpoint_open.py
lightning_gluefactory/models/matchers/: __init__.py  homography_matcher.py  lightglue.py
lightning_gluefactory/utils/: speed_monitor.py
